updated ReadMe file

--- a/climate_analysis.ipynb
+++ b/climate_analysis.ipynb
@@ -4758,6 +4758,8 @@
     "        filter(Measurement.date >= start_date).filter(Measurement.date <= end_date).all()\r\n",
     "temp_range = (calc_temps('2016-02-28', '2017-03-05'))\r\n",
     "print(temp_range)\r\n",
+    "\r\n",
+    "### Don't Use\r\n",
     "#     Date_Range = pd.date_range(start='2016-01-01', end='2017-01-01')\r\n",
     "#     Temp_range = session.query(Measurement.date, Measurement.tobs).filter(Measurement.date == Date_Range)\r\n",
     "#     session.query(func.min(Measurement.tobs), func.avg(Measurement.tobs), func.max(Measurement.tobs)).\\\r\n",
@@ -4796,7 +4798,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.8.5-final"
   }
  },
  "nbformat": 4,
